# CineSage

./: .gitignore  LICENSE  README.md  debug_test.py  pyproject.toml
src/: db.py  gcal.py  main.py  tmdb.py  vector_db.py
